[package]
name = "proc"
version = "0.1.0"
edition = "2021"

[lib]
name = "proc"
proc-macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"
convert_case = "0.6.0"
